Smoketest OK, but build failed. May be COPPER does not like JDK 19.